--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+## Spring DATASOURCE
+spring.datasource.url = jdbc:mysql://localhost:3306/CarPool?useSSL=false
+spring.datasource.username = root
+spring.datasource.password = root
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+## Spring JPA
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
+spring.jpa.show-sql=true
 
+spring.aop.proxy-target-class=true 
