--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,34 @@
-## Spring DATASOURCE
-spring.datasource.url = jdbc:mysql://localhost:3306/CarPool?useSSL=false
-spring.datasource.username = root
-spring.datasource.password = root
+# ==============================================================
+# = Data Source
+# ==============================================================
+spring.datasource.url=jdbc:mysql://localhost:3306/CarPool?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 ## Spring JPA
+# ==============================================================
+# = Hibernate ddl auto (create, create-drop, update)
+# ==============================================================
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
 spring.jpa.show-sql=true
+# ==============================================================
+# = Show or not log for each sql query
+# ==============================================================
+spring.aop.proxy-target-class=true
+# ==============================================================
+# = Spring Security / Queries for AuthenticationManagerBuilder
+# ==============================================================
+spring.security.user.name=user
+spring.security.user.password=user
+#security.user.password=user
+# ==============================================================
+# = Spring Security / Queries for AuthenticationManagerBuilder
+# ==============================================================
+spring.queries.users-query=select email, password, active from user where email=?
+spring.queries.roles-query=select u.email, r.role from user u inner join user_role ur on(u.user_id=ur.user_id) inner join role r on(ur.role_id=r.role_id) where u.email=?
 
-spring.aop.proxy-target-class=true 
+# ==============================================================
+# = Initialize the database using data.sql script
+# ==============================================================
+spring.datasource.initialization-mode=always
